add nb description

--- a/WUE_application.ipynb
+++ b/WUE_application.ipynb
@@ -17,6 +17,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description**\n",
+    "\n",
+    "This notebook executes scripts in this repository to visualize results from the analysis of data-driven versus optimality-based ecosystem water use strategies at study sites in:\n",
+    "\n",
+    "M Bassiouni, S Manzoni, and G Vico (in prep). Optimal ecosystem water use strategies explain soil moisture variability."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
