--- a/WUE_application.ipynb
+++ b/WUE_application.ipynb
@@ -22,9 +22,9 @@
    "source": [
     "**Description**\n",
     "\n",
-    "This notebook executes scripts in this repository to visualize results from the analysis of data-driven versus optimality-based ecosystem water use strategies at study sites in:\n",
+    "This notebook executes scripts in this repository to visualize results from the inferrence of data-driven versus optimality-based ecosystem water use strategies at study sites in:\n",
     "\n",
-    "M Bassiouni, S Manzoni, and G Vico (in prep). Optimal ecosystem water use strategies explain soil moisture variability."
+    "M Bassiouni, S Manzoni, and G Vico (in prep). Optimal ecosystem-scale water use strategies explain soil moisture variability."
    ]
   },
   {
