--- a/WUE_theory.ipynb
+++ b/WUE_theory.ipynb
@@ -22,9 +22,9 @@
    "source": [
     "**Description**\n",
     "\n",
-    "This notebook executes scripts in this repository to generate theoretical figures of water use strategies in:\n",
+    "This notebook executes scripts in this repository to generate theoretical figures of plant water use strategies in:\n",
     "\n",
-    "M Bassiouni, S Manzoni, and G Vico (in prep). Optimal ecosystem-scale water use strategies explain soil moisture variability."
+    "M Bassiouni, S Manzoni, and G Vico (in prep). Optimal plant water use strategies explain soil moisture variability.\n"
    ]
   },
   {
